--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import '../styles/global.css'
 ---
 
 <Layout title="Welcome to Astro.">
 	<h1>Helwane Haoui</h1>
 </Layout>
-
-<style>
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-		color: black;
-	}
-</style>
