--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,3 +10,36 @@ html, body {
     overflow-x: hidden;
     cursor: crosshair;
 }
+
+h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    margin-bottom: 1em;
+    color: black;
+}
+
+/* NavBar */
+
+/* NavBar */
+
+.nav-bar {
+    height: 40px;
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 8px 8px;
+    border-bottom: 2px solid black;
+    background-color: white;
+}
+
+.logo, .links {
+    text-transform: uppercase;
+    text-decoration: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: black;
+    font-weight: 900;
+}
