--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,5 +2,5 @@
     <a class="logo" href="/">Helwane Haoui</a>
     <a class="links" href="/photo">Photo</a>
     <a class="links" href="/video">Video</a>
-    <a class="links" href="/about">A propos</a>
+    <a class="links" href="/A-Propos">A propos</a>
 </div>
