--- a/src/pages/A-Propos.astro
+++ b/src/pages/A-Propos.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="A propos">
 	<h1>A propos</h1>
 </Layout>
 
