--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Photographie">
 	<h1>Photo</h1>
 </Layout>
 
