--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import '../styles/global.css'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Helwane Haoui">
 	<h1>Helwane Haoui</h1>
 </Layout>
