--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -1,9 +1,11 @@
 ---
+import Navbar from '../components/navbar.astro';
 import Layout from '../layouts/Layout.astro';
 import '../styles/photo.css'
 ---
 
 <Layout title="Photographie">
+	<Navbar/>
 	<div class="grid-container">
 		<div class="photo-container">
 			<div id="image-viewer">
