--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,4 +5,6 @@ import '../styles/global.css'
 
 <Layout title="Helwane Haoui">
 	<h1>Helwane Haoui</h1>
+	<h1><a href="/photo">PHOTOS</a></h1>
+	<h1><a href="/video">VIDEO</a></h1>
 </Layout>
