--- a/src/pages/video.astro
+++ b/src/pages/video.astro
@@ -1,10 +1,13 @@
 ---
+import Navbar from '../components/navbar.astro';
 import Layout from '../layouts/Layout.astro';
+import '../styles/video.css'
 ---
 
 <Layout title="Videos">
-	<video id="videoBackground" autoplay loop muted>
-		<source src="/videos/BM.mov" type="video/mp4">
+	<Navbar/>
+	<video id="videoBackground" autoplay>
+		<source id="videoSource" src="/videos/video01.mp4" type="video/mp4">
 		Votre navigateur ne supporte pas les vidéos HTML5.
 	</video>
 	<div id="videoControls">
@@ -12,22 +15,45 @@ import Layout from '../layouts/Layout.astro';
 		<button id="volume">Mute/Unmute</button>
 		<input type="range" id="speedControl" min="0.5" max="2" step="0.1" value="1">
 		<label for="speedControl">Vitesse</label>
-	</div>	
+	</div>
 </Layout>
 
-<style>
-	#videoBackground {
-		position: fixed;
-		right: 0;
-		bottom: 0;
-		min-width: 100%;
-		min-height: 100%;
-	}
+<script>
+	document.addEventListener('DOMContentLoaded', function() {
+    const video = document.getElementById('videoBackground') as HTMLVideoElement; 
+    const videoSource = document.getElementById('videoSource') as HTMLVideoElement;
+    const playPauseBtn = document.getElementById('playPause') as HTMLButtonElement;
+    const volumeBtn = document.getElementById('volume') as HTMLButtonElement;
+    const speedControl = document.getElementById('speedControl') as HTMLInputElement;
+    let currentVideoIndex = 1;
 
-	#videoControls {
-		position: fixed;
-		bottom: 20px;
-		left: 20px;
-		z-index: 10;
-	}
-</style>
+    playPauseBtn.addEventListener('click', function() {
+        if (video.paused) {
+            video.play();
+            playPauseBtn.textContent = 'Pause';
+        } else {
+            video.pause();
+            playPauseBtn.textContent = 'Play';
+        }
+    });
+
+    volumeBtn.addEventListener('click', function() {
+        video.muted = !video.muted;
+        volumeBtn.textContent = video.muted ? 'Unmute' : 'Mute';
+    });
+
+    speedControl.addEventListener('input', function() {
+        video.playbackRate = parseFloat(speedControl.value);
+    });
+
+    video.addEventListener('ended', function() {
+        currentVideoIndex++;
+        if (currentVideoIndex > 2) { // Si dépasse le nombre total de vidéos, réinitialise à 1
+            currentVideoIndex = 1;
+        }
+        videoSource.src = `/videos/video0${currentVideoIndex}.mp4`;
+        video.load(); 
+        video.play(); 
+    });
+});
+</script>
