--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,10 @@ html, body {
     cursor: crosshair;
 }
 
+a {
+    color: black;
+}
+
 h1 {
     font-size: 4rem;
     font-weight: 700;
@@ -33,6 +37,8 @@ h1 {
     padding: 8px 8px;
     border-bottom: 2px solid black;
     background-color: white;
+    position: relative;
+    z-index: 10;
 }
 
 .logo, .links {
