--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -5,6 +5,7 @@
     min-width: 100%;
     min-height: 100%;
     z-index: 1;
+    background-color: black;
 }
 
 #videoControls {
@@ -17,6 +18,7 @@
     align-items: center;
     width: 100%;
     padding: 8px 8px;
-    border-top: 2px solid black;
-    background-color: white;
+    border-top: 2px solid rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
