--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -17,7 +17,7 @@ import '../styles/photo.css';
 <script>
 document.addEventListener('DOMContentLoaded', function () {
   const slider = document.getElementById('image-slider');
-  const images = ['img1.jpg', 'img2.jpg', 'img3.jpg', 'img4.jpg', 'img5.jpg'];
+  const images = ['img1.webp', 'img2.webp', 'img3.webp', 'img4.webp', 'img5.webp'];
   let currentTick = 0;
   let currentImageIndex = -1;
   let scrollAccumulator = 0;  // Accumulateur pour les delta de défilement
