--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -1,34 +1,46 @@
 :root {
-    --gap: 20px;
-    --columns: 12
-  }
-
-.image-container {
-    display: grid;
-    grid-template-columns: repeat(var(--columns), calc((100% - (var(--columns) - 1) * var(--gap)) / var(--columns)));
-    gap: var(--gap);
-    margin-inline: 200px;
+  --gap: 12px;
+  --columns: 12
 }
 
-.image-slider {
-    width: 100%;
-    height: 500px;
-    position: fixed; /* Maintient le slider centré */
-    top: 50%; /* Centrage vertical */
-    left: 50%; /* Centrage horizontal */
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    grid-column: 5 / span 3;
-  }
-  
-  .image-slider img {
-    position: absolute;
-    transition: transform 0.3s ease-in-out; /* Animation fluide du déplacement */
-    width: 100%; /* Ajuste selon la taille de tes images */
-    height: auto;
-  }
-  
+.grid-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 40px); 
+}
+
+
+.photo-container {
+  grid-column: 3 / span 8;
+}
+
+#image-viewer {
+  position: relative; 
+  width: 100%; 
+  height: 500px;
+}
+
+#current-image {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover;
+}
+
+#left-area {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 50%; 
+  height: 100%;
+  cursor:e-resize
+}
+
+#right-area {
+  position: absolute; 
+  top: 0; 
+  right: 0; 
+  width: 50%; 
+  height: 100%;
+  cursor:e-resize;
+}
