--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,3 +51,17 @@ a {
     position: relative;
     z-index: 2
 }
+
+/* Animation pour pousser le hero-container vers le haut */
+@keyframes slideOutUp {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(-100%);
+    }
+  }
+  
+  .hero-container.out {
+    animation: slideOutUp 0.5s forwards; /* Remplace 0.5s par la durée souhaitée de l'animation */
+  }
