style image navbar

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,6 +1,3 @@
 <div class="nav-bar">
-    <a class="logo" href="/">Helwane Haoui</a>
-    <a class="links" href="/photo">Photo</a>
-    <a class="links" href="/video">Video</a>
-    <a class="links" href="/A-Propos">A propos</a>
+    <a class="logo" href="/">Accueil</a>
 </div>
