--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,8 +35,7 @@ a {
     align-items: center;
     width: 100%;
     padding: 8px 8px;
-    border-bottom: 2px solid black;
-    background-color: white;
+    background-color: transparent;
     position: relative;
     z-index: 10;
 }
@@ -46,7 +45,7 @@ a {
     text-decoration: none;
     text-transform: uppercase;
     cursor: pointer;
-    color: black;
+    color: white;
     font-weight: 900;
     position: relative;
     z-index: 2
