--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -2,6 +2,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    height: 100vh;
     min-width: 100%;
     min-height: 100%;
     z-index: 1;
