--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -20,22 +20,18 @@ import '../styles/photo.css'
 <script>
 	const imagesFolder = 'images/';
 	let images = ['img1.webp', 'img2.webp', 'img3.webp', 'img4.webp', 'img5.webp'];
-
-	// Check if there is an index stored in sessionStorage
-	let currentIndex = parseInt(sessionStorage.getItem('currentIndex')) || 0;
-	document.getElementById('current-image').src = imagesFolder + images[currentIndex];
+	let currentIndex = 0;
 
 	document.getElementById('left-area').addEventListener('click', () => {
 		currentIndex = (currentIndex - 1 + images.length) % images.length;
 		(document.getElementById('current-image') as HTMLImageElement).src = imagesFolder + images[currentIndex];
-		sessionStorage.setItem('currentIndex', currentIndex.toString());
-		console.log('précédent');
+		console.log('précédent')
 	});
 
 	document.getElementById('right-area').addEventListener('click', () => {
 		currentIndex = (currentIndex + 1) % images.length;
 		(document.getElementById('current-image') as HTMLImageElement).src = imagesFolder + images[currentIndex];
-		sessionStorage.setItem('currentIndex', currentIndex.toString());
-		console.log('suivant');	
+		console.log('suivant')	
 	});
+
 </script>
