--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Cela sépare les éléments enfants : un au haut, un au milieu, un au bas */
+    justify-content: space-between;
 }
 
 .grid {
