--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,31 +19,35 @@ import '../styles/index.css'
 </Layout>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
-  const heroContainer = document.querySelector('.hero-container');
+	document.addEventListener('DOMContentLoaded', function() {
+  // Initialisation des couleurs
+  const colors = [
+    '#EFB8D6', '#FDE12D', '#1BCA9B', '#F76E11', '#9F44D3',
+    '#1B2430', '#00A4CC', '#F95700FF', '#2C5F2D', '#00539CFF'
+  ];
 
-  if (!sessionStorage.getItem('isAnimated')) {
-    const colors = [
-      '#EFB8D6', '#FDE12D', '#1BCA9B', '#F76E11', '#9F44D3',
-      '#1B2430', '#00A4CC', '#F95700FF', '#2C5F2D', '#00539CFF'
-    ];
-
+  const heroContainer = document.querySelector('.hero-container') as HTMLElement;
+  if (heroContainer) {
     const randomColor = colors[Math.floor(Math.random() * colors.length)];
-    heroContainer.style.backgroundColor = randomColor;
-
-    const links = document.querySelectorAll('.link-photo a, .link-video a');
-    links.forEach(link => {
-      link.addEventListener('click', function(e) {
-        e.preventDefault();
-        heroContainer.classList.add('out');
-        sessionStorage.setItem('isAnimated', true); // Marquer l'animation comme jouée
-
-        setTimeout(() => {
-          window.location.href = this.getAttribute('href');
-        }, 500); // Délai avant la redirection
-      });
-    });
+    heroContainer.style.backgroundColor = randomColor; // Appliquer la couleur aléatoire
+    heroContainer.classList.remove('out'); // Assurez-vous que 'out' n'est pas appliqué
   }
+
+  // Gestion des liens
+  const links = document.querySelectorAll('.link-photo a, .link-video a');
+  links.forEach(link => {
+    link.addEventListener('click', function(e) {
+      e.preventDefault();
+      const href = this.getAttribute('href'); 
+
+      heroContainer.classList.add('out');
+
+      setTimeout(() => {
+        window.location.href = href;
+      }, 500); // Temps pour l'animation
+    });
+  });
 });
+
 
 </script>
