--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,3 +40,17 @@
     }
   }
   
+
+  /* Animation pour pousser le hero-container vers le haut */
+@keyframes slideOutUp {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(-100%);
+    }
+  }
+  
+  .hero-container.out {
+    animation: slideOutUp 0.5s forwards; /* Remplace 0.5s par la durée souhaitée de l'animation */
+  }
