--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'BanglaMN';
+  src: url('/fonts/BanglaMN.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BanglaMN_Bold';
+  src: url('/fonts/BanglaMN_Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +20,9 @@
 }
 
 html, body {
-    font-family: system-ui, sans-serif;
-    cursor: crosshair;
-    overflow: hidden;
+  font-family: 'BanglaMN', sans-serif;
+  cursor: crosshair;
+  overflow: hidden;
 }
 
 h1 {
