--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import '../styles/index.css'
 				<a href="/video">VIDEO</a>
 			</div>
 		</div>
-		<p class="name">Helwane Haoui</p>
+		<p class="name">contact@helwanehaoui.com</p>
 	</div>
 </Layout>
 
