--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,7 +29,7 @@
 
 .name {
     text-align: center;
-    font-size:calc(16px + 1.5vw);
+    font-size:calc(16px + .5vw);
     color: white;
     margin-top: auto;
     margin-bottom: 20px; 
