--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -15,11 +15,11 @@
     z-index: 10;
     height: 40px;
     display: flex; 
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 12px;
     width: 100%;
     padding: 8px 8px;
-    border-top: 2px solid rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     color: white;
 }
