effet photo WIP etape 1

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,9 +49,9 @@ a {
     align-items: center;
     width: 100%;
     padding: 8px 8px;
-    background-color: transparent;
     position: relative;
     z-index: 10;
+    background-color: black;
 }
 
 .logo, .links {
