--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -6,32 +6,170 @@ import '../styles/photo.css'
 
 <Layout title="Photographie">
 	<Navbar/>
-	<div class="grid-container">
-		<div class="photo-container">
-			<div id="image-viewer">
-				<img src="images/img1.webp" id="current-image">
-			</div>
+	<div class="page-container">
+	<div class="slider-content">
+		<!-- <div class="slide-number">
+		  <div class="prefix">
+			<div>1</div>
+			<div>2</div>
+			<div>3</div>
+			<div>4</div>
+			<div>5</div>
+		  </div>
+		  <div class="postfix"><span>/</span> 5</div>
 		</div>
+  
+		<div class="slide-name">
+		  <div class="names">
+			<div>Ether Shift Mode</div>
+			<div>Solar Thread</div>
+			<div>Quantum Sheen Veil</div>
+			<div>Flux Aura</div>
+			<div>Echo Nimbus</div>
+		  </div>
+		</div>
+  
+		<div class="slide-year">
+		  <div class="years">
+			<div>2023</div>
+			<div>2021</div>
+			<div>2022</div>
+			<div>2023</div>
+			<div>2017</div>
+		  </div>
+		</div> -->
+	  </div>
+	  <div class="slider">
+		<div class="slide" id="slide-1">
+		  <img src="./images/img1.webp" alt="" />
+		</div>
+		<div class="slide" id="slide-2">
+		  <img src="./images/img2.webp" alt="" />
+		</div>
+		<div class="slide" id="slide-3">
+		  <img src="./images/img3.webp" alt="" />
+		</div>
+		<div class="slide" id="slide-4">
+		  <img src="./images/img4.webp" alt="" />
+		</div>
+		<div class="slide" id="slide-5">
+		  <img src="./images/img5.webp" alt="" />
+		</div>
+		<div style="height: 400vh"></div>
+	  </div>
 	</div>
-	<div id="left-area"></div>
-	<div id="right-area"></div>	  
 </Layout>
-
-<script>
-	const imagesFolder = 'images/';
-	let images = ['img1.webp', 'img2.webp', 'img3.webp', 'img4.webp', 'img5.webp'];
-	let currentIndex = 0;
-
-	document.getElementById('left-area').addEventListener('click', () => {
-		currentIndex = (currentIndex - 1 + images.length) % images.length;
-		(document.getElementById('current-image') as HTMLImageElement).src = imagesFolder + images[currentIndex];
-		console.log('précédent')
-	});
-
-	document.getElementById('right-area').addEventListener('click', () => {
-		currentIndex = (currentIndex + 1) % images.length;
-		(document.getElementById('current-image') as HTMLImageElement).src = imagesFolder + images[currentIndex];
-		console.log('suivant')	
-	});
-
-</script>
+	  <script>
+		import gsap from 'gsap';
+		
+		document.addEventListener("DOMContentLoaded", function () {
+		  const slides = document.querySelectorAll(".slide");
+		  let currentSlideIndex = 0;
+		  let isAnimating = false;
+		  let currentTopValue = 0;
+  
+		  const elements = [
+			{ selector: ".prefix", delay: 0 },
+			{ selector: ".names", delay: 0.15 },
+			{ selector: ".years", delay: 0.3 },
+		  ];
+  
+		  slides.forEach((slide, idx) => {
+			if (idx !== 0) {
+			  const img = slide.querySelector("img");
+			  gsap.set(img, { scale: 2, top: "4em" });
+			}
+		  });
+  
+		  function showSlide(index) {
+			if (isAnimating) return;
+			isAnimating = true;
+			const slide = slides[index];
+			const img = slide.querySelector("img");
+  
+			currentTopValue -= 30;
+  
+			elements.forEach((elem) => {
+			  gsap.to(document.querySelector(elem.selector), {
+				y: `${currentTopValue}px`,
+				duration: 2,
+				ease: "power4.inOut",
+				delay: elem.delay,
+			  });
+			});
+  
+			gsap.to(img, {
+			  scale: 1,
+			  top: "0%",
+			  duration: 2,
+			  ease: "power3.inOut",
+			});
+			gsap.to(
+			  slide,
+			  {
+				clipPath: "polygon(0 0%, 100% 0%, 100% 100%, 0 100%)",
+				duration: 2,
+				ease: "power4.inOut",
+				onComplete: () => {
+				  isAnimating = false;
+				},
+			  },
+			//   "<"
+			);
+		  }
+  
+		  function hideSlide(index) {
+			if (isAnimating) return;
+			isAnimating = true;
+			const slide = slides[index];
+			const img = slide.querySelector("img");
+  
+			currentTopValue += 30;
+			elements.forEach((elem) => {
+			  gsap.to(document.querySelector(elem.selector), {
+				y: `${currentTopValue}px`,
+				duration: 2,
+				ease: "power4.inOut",
+				delay: elem.delay,
+			  });
+			});
+  
+			gsap.to(slide, {
+			  clipPath: "polygon(0 100%, 100% 100%, 100% 100%, 0 100%)",
+			  duration: 2,
+			  ease: "power4.inOut",
+			});
+  
+			gsap.to(img, {
+			  scale: 2,
+			  top: "4em",
+			  duration: 2,
+			  ease: "power3.inOut",
+			});
+  
+			gsap.to(
+			  slide,
+			  {
+				clipPath: "polygon(0 100%, 100% 100%, 100% 100%, 0 100%)",
+				duration: 2,
+				ease: "power4.inOut",
+				onComplete: () => {
+				  isAnimating = false;
+				},
+			  },
+			//   "<"
+			);
+		  }
+  
+		  window.addEventListener("wheel", (e) => {
+			if (isAnimating) return;
+			if (e.deltaY > 0 && currentSlideIndex < slides.length - 1) {
+			  showSlide(currentSlideIndex + 1);
+			  currentSlideIndex++;
+			} else if (e.deltaY < 0 && currentSlideIndex > 0) {
+			  hideSlide(currentSlideIndex);
+			  currentSlideIndex--;
+			}
+		  });
+		});
+	  </script>
