--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -1,47 +1,100 @@
-:root {
-  --gap: 12px;
-  --columns: 12
-}
-
-.grid-container {
+.page-container {
+  background-color: black;
+  height: calc(100vh - 40px);
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -40px;
-  min-height: 100vh; 
-  background-color: black;
 }
 
-.photo-container {
-  grid-column: 3 / span 8;
+.slider-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10000;
 }
 
-#image-viewer {
-  position: relative; 
-  width: 100%; 
-  height: 500px;
+.slider {
+  position: relative;
+  width: 50vw;
+  height: 50vh;
 }
 
-#current-image {
-  width: 100%; 
-  height: 100%; 
+.slide {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+}
+
+#slide-1 {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
-#left-area {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  width: 50%; 
-  height: 100%;
-  cursor:e-resize
+.spacer {
+  height: 500vh;
 }
 
-#right-area {
-  position: absolute; 
-  top: 0; 
-  right: 0; 
-  width: 50%; 
-  height: 100%;
-  cursor:e-resize;
+.slide-number {
+  position: absolute;
+  top: 55%;
+  left: 10%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  gap: 0.25em;
+}
+
+.postfix span {
+  padding: 0 0.25em;
+}
+
+.slide-name {
+  position: absolute;
+  top: 55%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+}
+
+.slide-year {
+  position: absolute;
+  top: 55%;
+  right: 20%;
+  transform: translate(-50%, -50%);
+}
+
+.slide-number,
+.slide-name,
+.slide-year {
+  font-size: 18px;
+  color: #fff;
+  line-height: 30px;
+  clip-path: polygon(0 0, 100% 0, 100% 30px, 0 30px);
+  text-transform: uppercase;
+}
+
+.prefix,
+.names,
+.years {
+  position: relative;
+  top: 0;
+}
+
+@media (max-width: 900px) {
+  .slide-name {
+    left: 50%;
+  }
+
+  .slide-year {
+    right: 10%;
+  }
 }
