centrer les videos

--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -1,13 +1,16 @@
-#videoBackground {
-    position: fixed;
-    right: 0;
-    bottom: 0;
+.video-page {
+    background-color: black;
     height: 100vh;
     width: 100vw;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: 1;
-    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+#videoBackground {
+    width: auto;
+    height: 50%;
+    margin-bottom: 40px;
 }
 
 #videoControls {
