--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,7 @@
 }
 
 .link-photo a, .link-video a {
-    color: white;
+    color: black;
     font-size:calc(40px + 3.5vw);
     font-family: 'BanglaMN_Bold', sans-serif;
 }
@@ -31,7 +31,7 @@
 .name {
     text-align: center;
     font-size:calc(16px + .5vw);
-    color: white;
+    color: black;
     margin-top: auto;
     margin-bottom: 20px; 
 }
