--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -7,11 +7,15 @@ import '../styles/photo.css';
 <Layout title="Photographie">
     <Navbar/>
     <div class="page-container">
-        <img id="left-icon" src="/icons/left-icon.svg" alt="Précédent" class="icon" />
+        <div class="left-icon-container">
+            <img id="left-icon" src="/icons/left-icon.svg" alt="Précédent" class="icon" />
+        </div>
         <div class="image-container">
           <img id="main-image" src="./images/img1.webp" class="image" />
         </div>
-        <img id="right-icon" src="/icons/right-icon.svg" alt="Suivant" class="icon" />
+        <div class="right-icon-container">
+            <img id="right-icon" src="/icons/right-icon.svg" alt="Précédent" class="icon" />
+        </div>
     </div>
 </Layout>
 
