--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -8,8 +8,8 @@
 }
 
 .image-container {
-  width: auto;
-  height: 50%;
+  width: 100%;
+  height: 100%;
 }
 
 .image {
@@ -23,4 +23,8 @@
   height: auto;
   cursor: pointer;
   margin: 40px
+}
+
+.right-icon-container, .left-icon-container {
+  width: 100px;
 }
