image et a propos

--- a/src/pages/A-Propos.astro
+++ b/src/pages/A-Propos.astro
@@ -1,9 +1,26 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import '../styles/a-propos.css';
 ---
 
 <Layout title="A propos">
-	<h1>A propos</h1>
+	<div class="a-propos-container">
+		<p class="a-propos-text">
+			Mon objectif principal est de créer l'excellence en matière de narration, à adopter l'innovation et à combiner les approches traditionnelles et modernes.
+			Je me suis engagé dans une trajectoire alimentée par une profonde curiosité.
+			<br/>
+			<br/>
+			Mon travail transcende la simple création de belles images, il offre une nouvelle lentille à travers laquelle nous percevons à la fois le familier et l'inconnu, cultivant une intimité née d'une véritable intrépidité.
+			<br/>
+			<br/>
+			Je navigue dans les domaines de la photographie, de la direction artistique et de la psychologie du consommateur.
+			Ses intérêts éclectiques couvrent les arts, le design et la culture du monde.
+		</p>
+		<img src="/icons/divider.svg" alt="">
+		<p class="a-propos-text">2024 HELWANE HAOUI</p>
+		<p class="a-propos-text">Tout le contenu est protégé par le droit d'auteur de l'artiste. Aucune utilisation commerciale sans autorisation écrite expressément.</p>
+		<p class="a-propos-text">contact@helwanehaoui.com</p>
+	</div>
 </Layout>
 
 <style>
