--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -5,11 +5,13 @@
   justify-content: center;
   align-items: center;
   cursor: zoom-in;
+  pointer-events: none;
 }
 
 .image-container {
   width: 100%;
   height: 100%;
+  margin-bottom: 40px;
 }
 
 .image {
