--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,9 +47,10 @@ a {
     display: flex; 
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     padding: 8px 8px;
-    position: relative;
+    position: absolute;
+    top: 12px;
+    left: 12px;
     z-index: 10;
     background-color: black;
 }
