--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -1,6 +1,6 @@
 .page-container {
   background-color: black;
-  height: calc(100vh - 40px);
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
