--- a/src/styles/a-propos.css
+++ b/src/styles/a-propos.css
@@ -2,9 +2,37 @@
     background-color: black;
     width: 100vw;
     height: 100vh;
-    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.a-propos-text {
-    color: white;
+.a-propos-container p {
+    color: #ffffff;
+}
+
+.presentation {
+    width: 95%;
+    margin-inline: 2.5%;
+}
+
+.copywrite {
+    font-size: 10px;
+} 
+
+.divider {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+    margin-inline: 2.5%;
+    margin-bottom: 12px;
 }
