--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,7 +52,7 @@ a {
     top: 12px;
     left: 12px;
     z-index: 10;
-    background-color: black;
+    background-color: transparent;
 }
 
 .logo, .links {
