--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -7,16 +7,22 @@
   cursor: zoom-in;
 }
 
+.image-zoomed {
+  cursor: zoom-out;
+}
+
 .image-container {
   width: 100%;
   height: 100%;
   margin-bottom: 40px;
+  overflow: hidden;
 }
 
 .image {
   width: 100%;
   height: 100%;
-  object-fit: contain;  
+  object-fit: contain;
+  transition: transform 0.2s ease-in-out;
 }
 
 .icon {
