add right assets

--- a/src/pages/photo.astro
+++ b/src/pages/photo.astro
@@ -20,7 +20,7 @@ import '../styles/photo.css';
 </Layout>
 
 <script>
-    const images = ["./images/img1.webp", "./images/img2.webp", "./images/img3.webp"];
+    const images = ["./images/img1.webp", "./images/img2.webp", "./images/img3.webp", "./images/img4.webp", "./images/img5.webp", "./images/img6.webp"];
     let currentIndex = 0;
     let isZoomed = false; // État du zoom, false indique que l'image est au niveau de zoom normal
     
