--- a/src/styles/photo.css
+++ b/src/styles/photo.css
@@ -7,6 +7,10 @@
   cursor: zoom-in;
 }
 
+#main-image {
+  padding: 3.5% 0px;
+}
+
 .image-zoomed {
   cursor: zoom-out;
 }
@@ -14,7 +18,6 @@
 .image-container {
   width: 100%;
   height: 100%;
-  margin-bottom: 40px;
   overflow: hidden;
 }
 
